<resources>
    <string name="app_name">TP_AMOV</string>
    <string name="no_account"><u>Don\'t have an account?</u></string>
    <string name="has_account"><u>Already have an account?</u></string>
    <string name="end_game">"Game Over !"</string>
    <string name="end_game_win">You won the game !</string>
    <string name="you_won">You won!</string>
    <string name="sign_in">Sign In</string>
    <string name="ok">Ok</string>
    <string name="try_another_time">Try another time</string>
    <string name="are_you_sure">Are you sure?</string>
    <string name="ok_to_leave">Press ok to leave or cancel to continue</string>
    <string name="cancel">Cancel</string>
    <string name="top_4">TOP 4</string>
    <string name="top_5">TOP 5</string>
    <string name="top_3">TOP 3</string>
    <string name="top_2">TOP 2</string>
    <string name="top_1">TOP 1</string>
    <string name="top_5_times">Top 5 Times</string>
    <string name="top_5_scores">Top 5 Scores</string>
    <string name="start_game">Start Game !</string>
    <string name="client_mode">Client Mode</string>
    <string name="server_mode">Server Mode</string>
    <string name="button_connect">Connect</string>
    <string name="ask_ip">Server IP address:</string>
    <string name="msg_ip_address">Server IP address: %s\nWaiting for a client...</string>
    <string name="btn_emulator">Connect to emulator</string>
    <string name="button_cancel">Cancel</string>
    <string name="error_address">Address not recognized</string>
    <string name="game_finished">Game Finished</string>
    <string name="new_avatar">New Avatar</string>
    <string name="change_name">Change Name</string>
    <string name="photo_capture_success">Photo captured successfully!</string>
    <string name="photo_capture_fail">Unable to capture photo!</string>
    <string name="change_name_description">Write your new name</string>
    <string name="change_name_error">Invalid name</string>
    <string name="description">This application was developed in the scope of the mobile architectures course unit of the year 2022/2023 by Tatiana Pimentel, Bernardo Gomes and André Pascoa from the class P4</string>
    <string name="connect_with_us">Connect with us</string>
    <string name="tatiana">Tatiana - a21280330@isec.pt</string>
    <string name="bernardo">Bernardo - a21280210@isec.pt</string>
    <string name="andre">André - a21280183@isec.pt</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="hint">****</string>
    <string name="math_game">MATH GAME</string>
    <string name="mini_description">This app was made within the scope of the discipline of AMOV</string>
    <string name="sign_up">Sign Up</string>
    <string name="username">Username</string>
    <string name="your_top_5_plays">Your Top 5 Plays</string>
</resources>