<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:orientation="vertical"
tools:context=".AboutUsActivity"
android:background="@drawable/wave">



<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="400dp"
    android:layout_weight="1"
    android:orientation="horizontal"
    android:layout_marginTop="20dp">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:padding="10dp"
        android:src="@drawable/icon1">

    </ImageView>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:padding="10dp"
        android:src="@drawable/icon2">

    </ImageView>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:padding="10dp"
        android:src="@drawable/icon3">

    </ImageView>

</LinearLayout>


<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_weight="1"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:text="@string/description"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:padding="10px"
        android:layout_marginBottom="15dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:fontFamily="@font/roboto">

    </TextView>

    <View
        android:layout_marginTop="15dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"

        android:layout_width="match_parent"
        android:layout_height="5dp"
        android:background="@color/white"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:text="@string/connect_with_us"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:padding="10px"
        android:layout_marginTop="15dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginBottom="15dp"
        android:fontFamily="@font/roboto">

    </TextView>

    <View
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginBottom="15dp"
        android:layout_width="match_parent"
        android:layout_height="5dp"
        android:background="@color/white"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:text="@string/tatiana"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:padding="10px"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="15dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:fontFamily="@font/roboto">

    </TextView>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:text="@string/bernardo"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:padding="10px"
        android:layout_marginBottom="15dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:fontFamily="@font/roboto">

    </TextView>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:text="@string/andre"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:padding="10px"
        android:layout_marginBottom="15dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:fontFamily="@font/roboto">

    </TextView>


</LinearLayout>

</LinearLayout>