<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="250dp"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_gravity="center">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:cardCornerRadius="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_margin="10dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/are_you_sure"
                android:textSize="36sp"
                android:textColor="@color/teal_700"
                android:fontFamily="@font/roboto"
                android:gravity="center"
                />

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_weight="1"
                app:srcCompat="@drawable/sad" />

            <TextView
                android:id="@+id/txtName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:text="@string/ok_to_leave"
                android:textColor="@color/teal_700"
                android:fontFamily="@font/roboto"
                android:gravity="center"
                />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btnOk_back"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_gravity="center"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:layout_marginEnd="10dp"
                    android:text="@string/ok"
                    android:textSize="16sp"
                    android:textColor="@color/white"
                    android:background="@drawable/buttons"
                    android:fontFamily="@font/roboto" />

                <Button
                    android:id="@+id/btnCancel"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_gravity="center"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:text="@string/cancel"
                    android:textSize="16sp"
                    android:textColor="@color/white"
                    android:background="@drawable/buttons"
                    android:fontFamily="@font/roboto" />

            </LinearLayout>




        </LinearLayout>

    </androidx.cardview.widget.CardView>


</LinearLayout>