<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:gravity="center">

    <androidx.cardview.widget.CardView
        android:id="@+id/card_score1"
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:layout_margin="15dp"
        app:cardCornerRadius="20dp"
        app:cardBackgroundColor="@color/teal_700">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="275dp"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_marginTop="7dp"
                android:layout_marginBottom="7dp">

                <TextView
                    android:layout_width="100dp"
                    android:layout_height="40dp"
                    android:layout_marginStart="10dp"
                    android:text="@string/top_1"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:textSize="26sp"
                    android:fontFamily="@font/roboto">

                </TextView>

                <TextView
                    android:id="@+id/info_game1"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="10dp"
                    android:text=""
                    android:textColor="@color/white"
                    android:textSize="16sp"
                    android:fontFamily="@font/roboto">

                </TextView>



            </LinearLayout>

            <ImageView
                android:id="@+id/image1"
                android:layout_width="80dp"
                android:layout_height="90dp"
                android:padding="5dp"
                android:scaleType="centerCrop"
                android:src="@drawable/ic_avatar">

            </ImageView>

        </LinearLayout>


    </androidx.cardview.widget.CardView>


    <androidx.cardview.widget.CardView
        android:id="@+id/card_score2"
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:layout_margin="15dp"
        app:cardCornerRadius="20dp"
        app:cardBackgroundColor="@color/teal_700">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="275dp"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_marginTop="7dp"
                android:layout_marginBottom="7dp">

                <TextView
                    android:layout_width="100dp"
                    android:layout_height="40dp"
                    android:layout_marginStart="10dp"
                    android:text="@string/top_2"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:textSize="26sp"
                    android:fontFamily="@font/roboto">

                </TextView>

                <TextView
                    android:id="@+id/info_game2"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="10dp"
                    android:text=""
                    android:textColor="@color/white"
                    android:textSize="16sp"
                    android:fontFamily="@font/roboto">

                </TextView>



            </LinearLayout>

            <ImageView
                android:id="@+id/image2"
                android:layout_width="80dp"
                android:layout_height="90dp"
                android:padding="5dp"
                android:scaleType="centerCrop"
                android:src="@drawable/ic_avatar">

            </ImageView>

        </LinearLayout>


    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/card_score3"
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:layout_margin="15dp"
        app:cardCornerRadius="20dp"
        app:cardBackgroundColor="@color/teal_700">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="275dp"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_marginTop="7dp"
                android:layout_marginBottom="7dp">

                <TextView
                    android:layout_width="100dp"
                    android:layout_height="40dp"
                    android:layout_marginStart="10dp"
                    android:text="@string/top_3"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:textSize="26sp"
                    android:fontFamily="@font/roboto">

                </TextView>

                <TextView
                    android:id="@+id/info_game3"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="10dp"
                    android:text=""
                    android:textColor="@color/white"
                    android:textSize="16sp"
                    android:fontFamily="@font/roboto">

                </TextView>



            </LinearLayout>

            <ImageView
                android:id="@+id/image3"
                android:layout_width="80dp"
                android:layout_height="90dp"
                android:padding="5dp"
                android:scaleType="centerCrop"
                android:src="@drawable/ic_avatar">

            </ImageView>

        </LinearLayout>


    </androidx.cardview.widget.CardView>


    <androidx.cardview.widget.CardView
        android:id="@+id/card_score4"
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:layout_margin="15dp"
        app:cardCornerRadius="20dp"
        app:cardBackgroundColor="@color/teal_700">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="275dp"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_marginTop="7dp"
                android:layout_marginBottom="7dp">

                <TextView
                    android:layout_width="100dp"
                    android:layout_height="40dp"
                    android:layout_marginStart="10dp"
                    android:text="@string/top_4"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:textSize="26sp"
                    android:fontFamily="@font/roboto">

                </TextView>

                <TextView
                    android:id="@+id/info_game4"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="10dp"
                    android:text=""
                    android:textColor="@color/white"
                    android:textSize="16sp"
                    android:fontFamily="@font/roboto">

                </TextView>



            </LinearLayout>

            <ImageView
                android:id="@+id/image4"
                android:layout_width="80dp"
                android:layout_height="90dp"
                android:padding="5dp"
                android:scaleType="centerCrop"
                android:src="@drawable/ic_avatar">

            </ImageView>

        </LinearLayout>


    </androidx.cardview.widget.CardView>


    <androidx.cardview.widget.CardView
        android:id="@+id/card_score5"
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:layout_margin="15dp"
        app:cardCornerRadius="20dp"
        app:cardBackgroundColor="@color/teal_700">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="275dp"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_marginTop="7dp"
                android:layout_marginBottom="7dp">

                <TextView
                    android:layout_width="100dp"
                    android:layout_height="40dp"
                    android:layout_marginStart="10dp"
                    android:text="@string/top_5"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:textSize="26sp"
                    android:fontFamily="@font/roboto">

                </TextView>

                <TextView
                    android:id="@+id/info_game5"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="10dp"
                    android:text=""
                    android:textColor="@color/white"
                    android:textSize="16sp"
                    android:fontFamily="@font/roboto">

                </TextView>



            </LinearLayout>

            <ImageView
                android:id="@+id/image5"
                android:layout_width="80dp"
                android:layout_height="90dp"
                android:padding="5dp"
                android:scaleType="centerCrop"
                android:src="@drawable/ic_avatar">

            </ImageView>

        </LinearLayout>


    </androidx.cardview.widget.CardView>

</LinearLayout>